# DataLogger

./: README.md  pyproject.toml
datalogger/: datareader.py  datawriter.py  dlcommon.py
tests/: test_basic.py  test_mprw.py  test_multi.py  test_multiproc.py
